--- a/index.html
+++ b/index.html
@@ -142,12 +142,13 @@
 
         onWrongList = false;
         wrongListSelIdx = 0;
+        showNew = getRandomInt(2);
         while(true){
             wrongListRand = getRandomInt(4);
             var randNum = 0;
             if (wrongListRand < 3 || wrongListIdx.length == 0) {
                 randNum = getRandomInt(characters.length);
-                if (seenList.includes(randNum) && getRandomInt(2)==0) {
+                if (seenList.includes(randNum) && showNew == 0) {
                     continue;
                 }
             } else {
